# ChiruAddons

./: .gitignore  3dUi.xml  3dUiReadMe.txt  CMakeLists.txt  EC_MenuContainer.cpp  EC_MenuContainer.h  EC_MenuItem.cpp  EC_MenuItem.h  EC_Portal.cpp  EC_Portal.h  EC_QML.cpp  EC_QML.h  GazeDialog.cpp  GazeDialog.h  MenuDataItem.h  MenuRendererInterface.h  MobilityModule.cpp  ObjectCaptureModule.cpp  ObjectCaptureModule.h  ObjectCaptureModuleDefines.h  QMLPlugin.cpp  QMLPlugin.h  README.md  RingMenuRenderer.cpp  RingMenuRenderer.h  ServiceFusion.xml  ServiceFusionCMakeBuildConfig.txt  ServiceFusionPlugins.xml  ServiceFusionReadMe.txt  ShelveMenuRenderer.cpp  ShelveMenuRenderer.h  StableHeaders.h  XMPPModule.cpp  XMPPModule.h  build-rdf-deps.bash  capture.js  scene.txml  testmesh.material
3dUiModule/: 3dUiModule.cpp  3dUiModule.h  3dUiModuleFwd.h  CMakeLists.txt  Container.cpp  Container.h  DragDropWidget.cpp  DragDropWidget.h  EC_VisualContainer.cpp  EC_VisualContainer.h  EventManager.cpp  EventManager.h  HttpRequestResponse.cpp  HttpRequestResponse.h  HttpRequestService.cpp  IContainer.h  IEventManager.h  IHttpRequestService.h  IScript.h  IScriptManager.h  IVisualContainer.h  Layout.cpp  Layout.h  MemoryStore.cpp  MemoryStore.h  Position3.h  RdfMemoryStore.cpp  RdfMemoryStore.h  RdfVocabulary.h  Script.h  ScriptManager.cpp  ScriptManager.h  ScriptServices.cpp  ScriptServices.h  TestScript.cpp  TestScript.h  VisualContainer.cpp  VisualContainer.h  qscript_scriptservices.cpp  qscript_scriptservices.h  (+2 more)
3dUiModule/CieMap/: CieMapFwd.h  Container.cpp  Container.h  EventManager.h  HttpRequestResponse.cpp  HttpRequestResponse.h  HttpRequestService.cpp  HttpRequestService.h  IContainer.h  IEventManager.h  IHttpRequestService.h  IScript.h  IScriptManager.h  IVisualContainer.h  Layout.h  Position3.h  ScriptManager.cpp  ScriptManager.h  ScriptServices.cpp  ScriptServices.h
Additional-ServiceFusionScenes/: ServiceFusionPlugins2D.xml  grooveshark.py  search.py  twitterSearch.py
Additional-ServiceFusionScenes/ServiceFusion/: ReadMe.txt  (+4 more)
Client/: AccountManager.cpp  AccountManager.h  Call.cpp  Call.h  CallExtension.cpp  CallExtension.h  ChatExtension.cpp  ChatExtension.h  Client.cpp  Client.h  Extension.cpp  Extension.h  MucExtension.cpp  MucExtension.h  UserItem.cpp  UserItem.h
ClientSideAvatar/: av_common.js  avatar.txml  avatar_entity.js  avatarapplication.js
CloudProcessor/: CloudFilter.cpp  CloudFilter.h  CloudProcessor.cpp  CloudProcessor.h  KinectCapture.cpp  KinectCapture.h  Registering.h
ColladaWebViewer/: CMakeLists.txt  ColladaViewerModule.cpp  ColladaViewerModule.h  WebSocketManager.cpp  WebSocketManager.h
ColladaWebViewer/webclient/: .gitignore  README.txt  app.min.js  index.html  webclient.html
ColladaWebViewer/webclient/css/: main.css
ColladaWebViewer/webclient/css/black-tie/: jquery-ui-1.8.23.custom.css  jquery-ui-1.8.24.custom.css
ColladaWebViewer/webclient/js/: connection.js  main.js
ColladaWebViewer/webclient/js/threejs/: Three.js  ThreeExtras.js  TrackballControls.js  three.js
ColladaWebViewer/webclient/js/util/: detectmobilebrowser.js  wsmanager.js
ColladaWebViewer/webclient/models/: CapturedChair.dae  CapturedHorse.dae  cube_vertexcolor2.dae
ColladaWebViewer/webclient/src/: main.js
ColladaWebViewer/webclient/src/gui/: dat.gui.js  gui.js  jquery-ui-1.8.23.min.js  jquery-ui-1.8.24.min.js
ColladaWebViewer/webclient/src/libs/: three.min.js
ColladaWebViewer/webclient/src/util/: ColladaLoader.js  THREEx.FullScreen.js  TrackballControls.js  wsmanager.js
ColladaWebViewer/webclient/tests/: colladatest_glge.html  colladatest_threejs.html
ColladaWebViewer/webclient/tools/: build.py  compress.py
EC_Menu/: CMakeLists.txt  EC_MenuContainer.cpp  EC_MenuContainer.h  EC_MenuItem.h  Example_ECMenuScript.js  MenuDataItem.cpp  MenuDataModel.cpp  MenuDataModel.h  RingMenuRenderer.cpp  ShelveMenuRenderer.h
EC_Portal/: EC_Portal.cpp  EC_Portal.h
EnergyMeasurements/: LICENSE.md  README.md
FlyingAvatar/: avatar.txml  flyerapplication.js  instructions.js
MeshReconstructor/: MeshConverter.cpp  MeshConverter.h  MeshReconstructor.cpp  MeshReconstructor.h
MobilityModule/: CMakeLists.txt  MobilityModule.cpp  MobilityModule.cpp~  MobilityModule.h  StableHeaders.h
ObjectCaptureModule/: CMakeLists.txt  ObjectCaptureModule.cpp  ObjectCaptureModule.h  ObjectCaptureModuleDefines.h
ObjectGrab/: objectgrab.js
QMLPlugin/: CMakeLists.txt  GazeDialog.cpp  GazeDialog.h  QMLPlugin.cpp  QMLPlugin.h
RdfModule/: CMakeLists.txt  IMemoryStore.h  IModel.h  INode.h  IStatement.h  IWorld.cpp  IWorld.h  RdfFactory.cpp  RdfFactory.h  RdfMemoryStore.cpp  RdfMemoryStore.h  RdfModel.cpp  RdfModel.h  RdfModule.cpp  RdfModule.h  RdfModuleApi.h  RdfModuleFwd.h  RdfNode.cpp  RdfNode.h  RdfStatement.cpp  RdfStatement.h  RdfWorld.cpp  RdfWorld.h
RdfModule/redland/: README
RdfModule/redland/include/: librdf.h  n3_common.h  n3_lexer.h  n3_parser.h  raptor.h  raptor_internal.h  raptor_nfc.h  raptor_rss.h  rasqal.h  rasqal_internal.h  rdf_concepts.h  rdf_concepts_internal.h  rdf_digest.h  rdf_digest_internal.h  rdf_files.h  rdf_hash.h  rdf_hash_internal.h  rdf_heuristics.h  rdf_init.h  rdf_init_internal.h  rdf_internal.h  rdf_iterator.h  rdf_iterator_internal.h  rdf_list.h  rdf_list_internal.h  rdf_log.h  rdf_log_internal.h  rdf_model.h  rdf_model_internal.h  rdf_node.h  rdf_node_internal.h  rdf_parser.h  rdf_parser_internal.h  rdf_query.h  rdf_query_internal.h  rdf_serializer.h  rdf_serializer_internal.h  rdf_statement.h  rdf_statement_internal.h  rdf_storage.h  (+20 more)
RdfModule/redland/lib/: libcurl.lib  libdb43.lib  librdf.lib  raptor.lib  rasqal.lib
WebSocketModule/: CMakeLists.txt  README.txt  WSSyncManager.cpp  WSSyncManager.h  WebSocketManager.cpp  WebSocketManager.h  WebSocketModule.cpp  WebSocketModule.h
XMPPModule/: CMakeLists.txt  XMPPModuleApi.h
adaptation-proxy/: LICENSE.txt  example-squid.conf  http_proxy.py  proxydoc.txt  worsen.py
sf-kit/: poll_asyncore.py  sfkit.py  sftest_4sq.py  sftest_twitter.py  sftest_ylenews.py  test4sq.py
webproxy/: http_proxy.py  worsen.py
(+941 files in other folders)
